--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
       <div id="main-container">
         <!-- 控制面板 -->
         <div id="control-panel">
+          <!-- 主题切换按钮 -->
+          <div class="theme-switch-container">
+            <button id="theme-toggle" class="theme-toggle" title="切换主题">
+              <svg class="theme-icon sun-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="12" cy="12" r="5"/>
+                <line x1="12" y1="1" x2="12" y2="3"/>
+                <line x1="12" y1="21" x2="12" y2="23"/>
+                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+                <line x1="1" y1="12" x2="3" y2="12"/>
+                <line x1="21" y1="12" x2="23" y2="12"/>
+                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+              </svg>
+              <svg class="theme-icon moon-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="m21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+              </svg>
+            </button>
+          </div>
+
           <h2>数据结构视界</h2>
 
           <!-- 数据结构选择 -->
@@ -29,10 +49,33 @@
             <h3>操作控制</h3>
             <div class="operation-controls">
               <input type="number" id="input-value" placeholder="输入数值" />
-              <button id="btn-insert">插入</button>
-              <button id="btn-delete">删除</button>
-              <button id="btn-search">搜索</button>
-              <button id="btn-clear">清空</button>
+              <button id="btn-insert" class="btn-with-icon">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <line x1="12" y1="5" x2="12" y2="19"/>
+                  <line x1="5" y1="12" x2="19" y2="12"/>
+                </svg>
+                插入
+              </button>
+              <button id="btn-delete" class="btn-with-icon">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <line x1="5" y1="12" x2="19" y2="12"/>
+                </svg>
+                删除
+              </button>
+              <button id="btn-search" class="btn-with-icon">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <circle cx="11" cy="11" r="8"/>
+                  <path d="m21 21-4.35-4.35"/>
+                </svg>
+                搜索
+              </button>
+              <button id="btn-clear" class="btn-with-icon error">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="3,6 5,6 21,6"/>
+                  <path d="m19,6v14a2,2 0 0,1 -2,2H7a2,2 0 0,1 -2,-2V6m3,0V4a2,2 0 0,1 2,-2h4a2,2 0 0,1 2,2v2"/>
+                </svg>
+                清空
+              </button>
             </div>
           </div>
 
@@ -40,10 +83,32 @@
           <div class="section">
             <h3>算法可视化</h3>
             <div class="algorithm-controls">
-              <button id="btn-step-by-step">逐步执行</button>
-              <button id="btn-auto-play">自动播放</button>
-              <button id="btn-pause">暂停</button>
-              <button id="btn-reset">重置</button>
+              <button id="btn-step-by-step" class="btn-with-icon">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polygon points="5,3 19,12 5,21 5,3"/>
+                </svg>
+                逐步执行
+              </button>
+              <button id="btn-auto-play" class="btn-with-icon primary">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polygon points="5,3 19,12 5,21 5,3"/>
+                </svg>
+                自动播放
+              </button>
+              <button id="btn-pause" class="btn-with-icon warning">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <rect x="6" y="4" width="4" height="16"/>
+                  <rect x="14" y="4" width="4" height="16"/>
+                </svg>
+                暂停
+              </button>
+              <button id="btn-reset" class="btn-with-icon">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="1,4 1,10 7,10"/>
+                  <path d="M3.51,15a9,9 0 1,0 2.13,-9.36L1,10"/>
+                </svg>
+                重置
+              </button>
             </div>
 
             <!-- 图算法特殊控制 -->
@@ -52,8 +117,23 @@
               <div class="graph-algorithm-controls">
                 <input type="number" id="start-node" placeholder="起始节点" />
                 <input type="number" id="end-node" placeholder="目标节点" />
-                <button id="btn-shortest-path">最短路径</button>
-                <button id="btn-add-edge">添加边</button>
+                <button id="btn-shortest-path" class="btn-with-icon success">
+                  <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="9,11 12,14 22,4"/>
+                    <path d="M21,12v7a2,2 0 0,1 -2,2H5a2,2 0 0,1 -2,-2V5a2,2 0 0,1 2,-2h11"/>
+                  </svg>
+                  最短路径
+                </button>
+                <button id="btn-add-edge" class="btn-with-icon">
+                  <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M16,8 L2,8"/>
+                    <path d="M8,2 L8,8 L8,14"/>
+                    <path d="M16,16 L22,16"/>
+                    <circle cx="8" cy="8" r="2"/>
+                    <circle cx="16" cy="16" r="2"/>
+                  </svg>
+                  添加边
+                </button>
               </div>
             </div>
 
